--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brasil Hosp - Soluções Hospitalares de Excelência</title>
+    <title>Brasil Hosp - Produtos Médicos e Hospitalares</title>
     <meta name="description" content="Fornecemos equipamentos médicos, medicamentos e serviços especializados para clínicas e hospitais em todo o Brasil. Mais de 25 anos de experiência." />
     <meta name="author" content="Brasil Hosp" />
     <meta name="keywords" content="equipamentos médicos, medicamentos hospitalares, serviços hospitalares, Brasil Hosp" />
